--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-pleeease": "^2.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.2.0",
+    "gulp-sass-bulk-import": "^1.0.1",
     "gulp-uglify": "^1.5.1",
     "gulp-webserver": "^0.9.1",
     "jpeg-js": "^0.1.1",
